# TSAL

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  README.md  configure.ac  install-cygwin  install-mac  install-ubuntu  readmeLinux.md  readmeMacOS.md  readmeWindows.md
cmake/: FindPortaudio.cmake  TsalConfig.cmake.in
examples/: CMakeLists.txt  Makefile.am  bubble_sort  bubble_sort.cpp  canon.cpp  chord.cpp  chord_p.cpp  factorial.cpp  fibonacci.cpp  hello_tsal.cpp  hello_tsal_threads.cpp  insertion_sort  insertion_sort.cpp  jubilate.cpp  jubilate.mid  jubilate_p.cpp  merge_sort.cpp  producer_consumer.cpp  producer_consumer_percussion.cpp  progress.cpp  quick_sort  quick_sort.cpp  rain-full.mid  rain.cpp  rain.mid  rain_p.cpp  selection_sort  selection_sort.cpp  testFib
genericMakefile/: Makefile
include/: Amp.hpp  AudioBuffer.hpp  Buffer.h  Buffer.hpp  Channel.hpp  ChannelDevice.hpp  Chord.h  Chord.hpp  Compressor.h  Compressor.hpp  Context.hpp  Delay.h  Delay.hpp  Effect.hpp  EffectChain.hpp  Envelope.h  Envelope.hpp  Filter.hpp  InputDevice.hpp  Instrument.hpp  LadspaEffect.hpp  LadspaManager.hpp  MidiNotes.h  MidiParser.h  MidiParser.hpp  MidiSequencer.hpp  Mixer.h  Mixer.hpp  Oscillator.h  Oscillator.hpp  OutputDevice.h  OutputDevice.hpp  Panning.hpp  ParameterManager.hpp  PolySynth.hpp  ProgressOctave.hpp  RouteDevice.h  RouteDevice.hpp  Sequencer.hpp  SoundFont.hpp  (+7 more)
src/: Amp.cpp  AudioNode.cpp  AudioNode.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelDevice.cpp  Chord.cpp  Chord.h  Compressor.cpp  Compressor.h  CompressorNode.cpp  CompressorNode.h  Context.cpp  Delay.cpp  Effect.cpp  Effect.h  EffectChain.cpp  Envelope.cpp  Filter.cpp  IODevice.h  InputDevice.cpp  InputDevice.h  Instrument.cpp  Instrument.h  LadspaEffect.cpp  LadspaManager.cpp  Makefile.am  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  MidiNotes.h  MidiParser.cpp  MidiSequencer.cpp  Mixer.cpp  Mixer.h  Oscillator.cpp  Oscillator.h  OscillatorNode.cpp  (+24 more)
tests/: CMakeLists.txt  Makefile.am  audiobuffer  audiobuffer.cpp  chord.cpp  chord_p.cpp  effects.cpp  hello_tsal.cpp  hello_tsal_threads.cpp  jubilate.cpp  jubilate_p.cpp  merge_sort.cpp  mixer.cpp  producer_consumer.cpp  progress.cpp  rain.cpp  rain_p.cpp  smart_sort.cpp  test.cpp
