add_executable(bubble_sort bubble_sort.cpp)
add_executable(canon canon.cpp)
# add_executable(chord chord.cpp)
# add_executable(chord_p chord_p.cpp)
add_executable(hello_tsal hello_tsal.cpp)
add_executable(hello_tsal_threads hello_tsal_threads.cpp)
# add_executable(jubilate_p jubilate_p.cpp)
add_executable(merge_sort merge_sort.cpp)
add_executable(producer_consumer producer_consumer.cpp)
# add_executable(producer_consumer_percussion producer_consumer_percussion.cpp)
add_executable(progress progress.cpp)
add_executable(quick_sort quick_sort.cpp)
# add_executable(rain rain.cpp)
# add_executable(rain_p rain_p.cpp)
add_executable(selection_sort selection_sort.cpp)

target_compile_features(bubble_sort PUBLIC cxx_std_14)
target_compile_features(canon PUBLIC cxx_std_14)
# target_compile_features(chord cxx_std_14)
# target_compile_features(chord_p cxx_std_14)
target_compile_features(hello_tsal PUBLIC cxx_std_14)
target_compile_features(hello_tsal_threads PUBLIC cxx_std_14)
# target_compile_features(jubilate_p cxx_std_14)
target_compile_features(merge_sort PUBLIC cxx_std_14)
target_compile_features(producer_consumer PUBLIC cxx_std_14)
# target_compile_features(producer_consumer_percussion cxx_std_14)
target_compile_features(progress PUBLIC cxx_std_14)
target_compile_features(quick_sort PUBLIC cxx_std_14)
# target_compile_features(rain cxx_std_14)
# target_compile_features(rain_p cxx_std_14)
target_compile_features(selection_sort PUBLIC cxx_std_14)

target_link_libraries(bubble_sort tsal)
target_link_libraries(canon tsal)
# target_link_libraries(chord tsal)
# target_link_libraries(chord_p tsal)
target_link_libraries(hello_tsal tsal)
target_link_libraries(hello_tsal_threads tsal)
# target_link_libraries(jubilate_p tsal)
target_link_libraries(merge_sort tsal)
target_link_libraries(producer_consumer tsal)
# target_link_libraries(producer_consumer_percussion tsal)
target_link_libraries(progress tsal)
target_link_libraries(quick_sort tsal)
# target_link_libraries(rain tsal)
# target_link_libraries(rain_p tsal)
target_link_libraries(selection_sort tsal)
