AM_CXXFLAGS = -Wall -I$(top_srcdir)/include -I/usr/local/include/rtaudio -lrtaudio

lib_LTLIBRARIES = libtsal.la
libtsal_la_SOURCES = Binasc.cpp Channel.cpp Chord.cpp Compressor.cpp Delay.cpp Effect.cpp EffectChain.cpp Envelope.cpp MidiEvent.cpp MidiEventList.cpp MidiFile.cpp MidiMessage.cpp MidiParser.cpp MidiSequencer.cpp Mixer.cpp Oscillator.cpp OutputDevice.cpp
